data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_439.wast
;; 10. **Test Description**: Establish a loop where repetitive block types and incorrect function index referencing diverge the path to `unreachable`.    - **Constraint**: Tests proper function and block type reference handling, ensuring loops maintain consistency across references.    - **Unreachable Code Execution**: Divergent paths due to reference errors should not reach `unreachable`.  By running these tests, we can identify and ensure differential behavior between vast WebAssembly implementations while particularly keeping an eye on Unreachable Code Execution patterns.

(assert_invalid
  (module (func $invalid-loop-reference
    (i32.const 0)
    (block $outer 
      (loop $inner
        (br $outer)
      )
    )
  ))
  "invalid label reference"
)